--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@ init();
 
 <canvas id="canvas" width="300" height="300"></canvas>
 <h2>Imagine how small in the universe we are, if you want some comfort click below</h2>
+<a id ="blink"  href="https://www.amazon.co.uk/dp/B07JH5N8WL">
+                       <img border="0" alt="theory" src="./laws.jpeg" width="100" height="150">
+
+                       </a>
 <p><h2>Or watch these videos to get lifted up</h2></p>
                            <a id ="blink"  href="https://mindtaxis.com">
                                                   <img border="0" alt="theory" src="./videos.jpeg" width="100" height="150">
