--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>The laws of emotion ebook</title>
     <script type="text/javascript">
     var sun = new Image();
 var moon = new Image();
